Logger working